<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/spacing_2x"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/spacing_2x"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_base">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTvSavingsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savings_name"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/appCompatTvSavedAmount"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTvSavedAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/appCompatTvTargetToSave"
            app:layout_constraintStart_toEndOf="@id/appCompatTvSavingsName"
            app:layout_constraintTop_toTopOf="parent"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTvTargetToSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target"
            app:layout_constrainedHeight="true"
            android:layout_margin="@dimen/spacing_base_half"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/appCompatTvSavedAmount"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

